--- a/poster_1.html
+++ b/poster_1.html
@@ -9,7 +9,7 @@
 		<div class="box1"><a href="https://www.tashsultana.com/"> Tash Sultana</a></div>
 		<div class="box2"><a href="https://www.terminal5nyc.com/">Terminal 5 </a></div>
 		<div class="box3"><a href="https://www.onthisday.com/events/november/18">November 18th </a></div>
-		<div class="box4"><a href="poster_2">Next poster</a></div>
+		<div class="box4"><a href="poster_2.html">Next poster</a></div>
 		<div class="box5"></div>
 		<div class="box6"></div>
 		<div class="box7"></div>
